--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <form action="/login" method="POST">
     <input name="email" type="email" placeholder="Email">
-     <input name="email" type="password" placeholder="Password">
+     <input name="password" type="password" placeholder="Password">
       <input type="submit">
 </form>
